CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT(Andy_SLAM )


SET(CMAKE_CXX_COMPILER "g++")
SET( CMAKE_BUILD_TYPE Release )
SET( CMAKE_CXX_FLAGS "-O3 -std=c++11" )

#设定可执行文件目录
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
#设定编译后的库文件存放的文件夹
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

#设定头文件目录
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
#增加子文件夹（可以在源文件夹继续构建）
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src)